[gd_scene load_steps=4 format=3 uid="uid://dxp5s1pwqmlg2"]

[ext_resource type="Script" path="res://levels/main/game.gd" id="1_ey8fq"]
[ext_resource type="PackedScene" uid="uid://ba4wxpnile4r0" path="res://ingredients/ingredient/ingredient.tscn" id="2_e1ilo"]
[ext_resource type="PackedScene" uid="uid://11imkwjsocn7" path="res://pizza/pizza.tscn" id="3_yf4nk"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ey8fq")
ingredient_scene = ExtResource("2_e1ilo")
round_duration_seconds = 10

[node name="PizzaPool" type="Node2D" parent="."]

[node name="Pizza01" parent="PizzaPool" instance=ExtResource("3_yf4nk")]

[node name="Pizza02" parent="PizzaPool" instance=ExtResource("3_yf4nk")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ReadyLabel" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 224.0
offset_right = 225.0
offset_bottom = 405.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 132
text = "Ready?"

[node name="IngredientsContainer" type="Node2D" parent="."]
position = Vector2(540, 1024)

[node name="GameTimer" type="Timer" parent="."]

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
